<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="casual"
            android:text="@string/login_account"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_log_in_to_continue"

            android:textColor="#99FFFFFF" />


        <!--  Email View  -->
        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/round_back_white"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/email_icon"
                android:importantForAccessibility="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/emailTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_cap"
                    android:textColor="#99FFFFFF"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="5dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#80FFFFFF"
                    android:textSize="12sp"
                    tools:ignore="LabelFor,VisualLintTextFieldSize,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>
        </LinearLayout>

        <!--  Password View  -->
        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/password_icon"
                android:importantForAccessibility="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/passwordTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_cap"
                    android:textColor="#99FFFFFF"
                    android:textSize="10sp"
                    android:visibility="gone"
                    tools:ignore="SmallSp" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_cap"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="5dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#80FFFFFF"
                    android:textSize="12sp"
                    tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>

        <!-- Sign In Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_back_login"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#99FFFFFF" />

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorGreenButtons"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>
</RelativeLayout>