<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ResultActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:outlineAmbientShadowColor="@color/white"
        tools:ignore="MissingConstraints,UnusedAttribute">

        <!-- Back button -->
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_to_go_to_home_screen"
            android:src="@drawable/back_btn" />

        <!-- Current window text on the right -->
        <TextView
            android:id="@+id/toolbar_text_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="18dp"
            android:fontFamily="casual"
            android:gravity="end"
            android:text="@string/result"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/gradient_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/result_gradient_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/congratulate_for_text_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/congratulate_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/well_done"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/congratulate_for_image_layout"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratulate_layout">

            <ImageView
                android:id="@+id/congratulate_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/result_achievement"
                android:importantForAccessibility="no" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/congratulate_for_text_score_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratulate_for_image_layout"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/congratulate_text_score"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:fontFamily="casual"
                android:gravity="center|center_vertical"
                android:text="@string/you_got_x_x_correct"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/leaderboard_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/button_to_go_to_leaderboard"
        android:focusable="true"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icons8_leaderboard_120___" />

    <LinearLayout
        android:id="@+id/users_rank_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20sp"
        android:background="@drawable/result_leaderboard_bg"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradient_result_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:src="@drawable/icons8_best_seller_90___"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/users_rank_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>