<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:typeface="serif"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/knowledgerealm_letter" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/KnowledgeRealmLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:importantForAccessibility="no"
            android:padding="10dp"
            android:src="@drawable/knowledgerealm_logo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/PlayLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="casual"
                    android:text="@string/play"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/SettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="casual"
                    android:text="@string/settings"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LeaderboardsLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="casual"
                    android:text="@string/leaderboards"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
